--- a/mobile/index.html
+++ b/mobile/index.html
@@ -23,8 +23,8 @@
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="matt.md - mobile" />
-    <meta name="twitter:creator" content="@alloutofmatt" />
-    <meta name="twitter:site" content="@alloutofmatt" />
+    <meta name="twitter:creator" content="@wwwdotca" />
+    <meta name="twitter:site" content="@wwwdotca" />
     <meta name="theme-color" content="#2f3136" />
     <canvas id="canvas"></canvas>
     <title>matt.md - mobile</title>
@@ -48,7 +48,7 @@
         <img
           id="profile-picture"
           class="h-24 w-24 rounded-full mx-auto mt-50vh"
-          onclick="window.open('https://twitter.com/alloutofmatt','_blank');"
+          onclick="window.open('https://twitter.com/wwwdotca','_blank');"
           src="https://i.ibb.co/tZPqLHw/image0-1.png"
           alt="Me"
         />
@@ -223,7 +223,7 @@
                 href="#"
                 target="_blank"
                 ><i class="fab fa-twitter"></i
-                ><span class="text-xs">@</span>alloutofmatt</a
+                ><span class="text-xs">@</span>wwwdotca</a
               >
             </div>
             <div>
