--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@ permalink: /index.html
     <div id="card-1"
       class="container relative z-10 text-center rounded-lg intro-landing shadow sm:shadow-md md:shadow-lg lg:shadow-xl xl:shadow-2xl border-white p-4">
       <img id="profile-picture" class="h-24 w-24 rounded-full mx-auto"
-        onclick="window.open('https://twitter.com/alloutofmatt','_blank');" src="https://i.ibb.co/tZPqLHw/image0-1.png"
+        onclick="window.open('https://twitter.com/wwwdotca','_blank');" src="https://i.ibb.co/tZPqLHw/image0-1.png"
         alt="Me" />
       <div id="spotify"></div>
       <div class="container mt-2">
@@ -153,8 +153,8 @@ permalink: /index.html
                 class="text-xs">@dont-ping.me</span></a>
           </div>
           <div>
-            <a class="block" href="https://twitter.com/alloutofmatt" target="_blank"><i class="fab fa-twitter"></i><span
-                class="text-xs">@</span>alloutofmatt</a>
+            <a class="block" href="https://twitter.com/wwwdotca" target="_blank"><i class="fab fa-twitter"></i><span
+                class="text-xs">@</span>wwwdotca</a>
           </div>
           <div>
             <a class="block" href="https://discord.gg/SK53UMK" target="_blank"><i class="fab fa-discord"></i>mattt<span
