--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@ permalink: /index.html
   <meta name="twitter:image" content="https://i.ibb.co/BjBzwHT/download.png" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="matt.md" />
-  <meta name="twitter:creator" content="@alloutofmatt" />
-  <meta name="twitter:site" content="@alloutofmatt" />
+  <meta name="twitter:creator" content="@wwwdotca" />
+  <meta name="twitter:site" content="@wwwdotca" />
   <meta name="theme-color" content="#2f3136" />
   <canvas id="spacer"></canvas>
   <canvas id="canvas"></canvas>
