--- a/mobile/index.html
+++ b/mobile/index.html
@@ -229,7 +229,7 @@
             <div>
               <a
                 class="block ml-15vw mr-20vw hover:shadow-lg"
-                href="https://discord.gg/SK53UMK"
+                href="https://discord.gg/ASuqg75pAP"
                 target="_blank"
                 ><i class="fab fa-discord"></i>mattt<span class="text-xs"
                   >#0596</span
