--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@ permalink: /index.html
                 class="text-xs">@</span>wwwdotca</a>
           </div>
           <div>
-            <a class="block" href="https://discord.gg/SK53UMK" target="_blank"><i class="fab fa-discord"></i>mattt<span
+            <a class="block" href="https://discord.gg/ASuqg75pAP" target="_blank"><i class="fab fa-discord"></i>mattt<span
                 class="text-xs">#0596</span></a>
           </div>
           <div>
