--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <canvas id="canvas"></canvas>
   <title>matt.md</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/src/build/style.css" />
+  <link rel="stylesheet" href="../src/build/style.css" />
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.1/css/all.css" />
 </head>
 
@@ -220,8 +220,8 @@
   </main>
 
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-  <script src="/anime.min.js"></script>
-  <script src="/src/app.js"></script>
+  <script src="../anime.min.js"></script>
+  <script src="../src/app.js"></script>
 </body>
 
 </html>
