--- a/arg/index.html
+++ b/arg/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="../favicon-error.ico" />
-    <link rel="icon" href="../favicon-error.ico" />
+    <link rel="shortcut icon" href="../public/favicon-error.ico" />
+    <link rel="icon" href="../public/favicon-error.ico" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -32,7 +32,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/build/style.css" />
+    <link rel="stylesheet" href=../src/build/style.css" />
     <link
       href="https://use.fontawesome.com/releases/v5.10.1/css/all.css"
       rel="stylesheet"
@@ -104,7 +104,7 @@
     </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="/anime.min.js"></script>
-    <script src="/src/app.js"></script>
+    <script src="../anime.min.js"></script>
+    <script src="../src/app.js"></script>
   </body>
 </html>
