--- a/arg/oh/ha/index.html
+++ b/arg/oh/ha/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="favicon-error.ico" />
-    <link rel="icon" href="favicon-error.ico" />
+    <link rel="shortcut icon" href="../../../public/favicon-error.ico" />
+    <link rel="icon" href="../../../public/favicon-error.ico" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -99,7 +99,7 @@
     </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="/anime.min.js"></script>
-    <script src="/src/app.js"></script>
+    <script src="../../../anime.min.js"></script>
+    <script src="../../../src/app.js"></script>
   </body>
 </html>
