--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="/public/favicon.ico" />
-    <link rel="icon" href="/public/favicon.ico" />
+    <link rel="shortcut icon" href="../public/favicon.ico" />
+    <link rel="icon" href="../public/favicon.ico" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
