--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <html lang="en" class="dark">
 
 <head>
-  <link rel="shortcut icon" href="/public/favicon.ico" />
-  <link rel="icon" href="/public/favicon.ico" />
+  <link rel="shortcut icon" href="../public/favicon.ico" />
+  <link rel="icon" href="../public/favicon.ico" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <meta name="keywords" content="HTML, CSS, Bootstrap, Punctuation, JavaScript, Matt, Matthew, Tailwind" />
