--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,14 @@
   <canvas id="canvas"></canvas>
   <title>matt.md</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../src/build/style.css" />
+  <link rel="stylesheet" href="src/build/style.css" />
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.1/css/all.css" />
 </head>
+
+<script>
+  console.log(__dirname);
+  console.log(__filename);
+</script>
 
 <body>
   <div id="loading">
