--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="../public/favicon-error.ico" />
-    <link rel="icon" href="../public/favicon-error.ico" />
+    <link rel="shortcut icon" href="public/favicon-error.ico" />
+    <link rel="icon" href="public/favicon-error.ico" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link href="../src/build/style.css" rel="stylesheet" />
+    <link href="src/build/style.css" rel="stylesheet" />
     <link
       href="https://use.fontawesome.com/releases/v5.10.1/css/all.css"
       rel="stylesheet"
@@ -98,7 +98,7 @@
     </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="../anime.min.js"></script>
-    <script src="../src/app.js"></script>
+    <script src="anime.min.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
