--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="en" class="dark">
 
 <head>
-  <link rel="shortcut icon" href="../public/favicon.ico" />
-  <link rel="icon" href="../public/favicon.ico" />
+  <link rel="shortcut icon" href="public/favicon.ico" />
+  <link rel="icon" href="public/favicon.ico" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <meta name="keywords" content="HTML, CSS, Bootstrap, Punctuation, JavaScript, Matt, Matthew, Tailwind" />
@@ -220,8 +220,8 @@
   </main>
 
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-  <script src="../anime.min.js"></script>
-  <script src="../src/app.js"></script>
+  <script src="anime.min.js"></script>
+  <script src="src/app.js"></script>
 </body>
 
 </html>
