--- a/arg/index.html
+++ b/arg/index.html
@@ -32,7 +32,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href=../src/build/style.css" />
+    <link rel="stylesheet" href="../src/build/style.css" />
     <link
       href="https://use.fontawesome.com/releases/v5.10.1/css/all.css"
       rel="stylesheet"
